# cleps-video-player

./: CMakeLists.txt  Cleps.pro  Cleps_MainWindow.cpp  Cleps_MainWindow.h  README.md  behaviour_settings.cpp  behaviour_settings.h  bookmarkmanager.cpp  bookmarkmanager.h  cleps-video-player.desktop  cleps.pro  cleps_vidplayer.cpp  cleps_vidplayer.h  icons.qrc  main.cpp  playlistview.cpp  playlistview.h  settings_dialog.cpp  settings_dialog.h  shortcuteditor.cpp  shortcuteditor.h  shortcuts.cpp  shortcuts.h  subtitleprovider.cpp  subtitleprovider.h  volumeslider.cpp  volumeslider.h
